--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,10 @@
 
 
 #root {
-  max-width: 1280px;
+  max-width: none;
+  width: 100vw;
   margin: 0 auto;
-  padding: 2rem;
+  /* padding: 2rem; */
   text-align: center;
 }
 
